# fcrawl

./: .gitignore  AGENT_GUIDE.md  CLAUDE.md  HANDOVER-2026-01-01-session2.md  HANDOVER-2026-01-01.md  README.md  fcrawl.py  install.sh  pyproject.toml  requirements.txt  setup.py  test_rickroll.py  test_transcribe.py
commands/: __init__.py  crawl.py  extract.py  map.py  scrape.py  search.py
docs/: SEARXNG_RELIABILITY_AND_DEBUG.md  google-descriptions-investigation.md  serper-dev-docs.md
docs/plans/: CSEARCH_MULTI_ENGINE_CAMOUFOX.md  SEARCH_ARCHITECTURE_OVERVIEW.md
searxng/: limiter.toml  settings.yml
src/fcrawl/: __init__.py  cli.py
src/fcrawl/commands/: _x_diagnose.py  _x_twitterapi.py  crawl.py  csearch.py  extract.py  gsearch.py  map.py  reddit.py  scrape.py  search.py  transcribe.py  x.py  yt_channel.py  yt_search.py  yt_transcript.py
src/fcrawl/engines/: __init__.py  aggregator.py  base.py  bing.py  brave.py  google.py
src/fcrawl/utils/: article_parser.py  cache.py  config.py  output.py  reddit_client.py  transcriber.py  x_client.py
src/fcrawl/vendors/twitterapi_io/: __init__.py  client.py  errors.py  mapper.py
src/fcrawl/vendors/twscrape/: LICENSE  __init__.py  account.py  accounts_pool.py  api.py  db.py  imap.py  logger.py  login.py  models.py  queue_client.py  utils.py  xclid.py
tests/: test_twitterapi_mapper.py  test_twscrape_diagnostics.py
tests/fixtures/twitterapi_io/: tweet_reply.json  tweet_simple.json  tweet_with_quote.json  user_profile.json
utils/: __init__.py  config.py  output.py
