[project]
name = "fcrawl"
version = "0.1.0"
description = "A powerful CLI tool for Firecrawl - web scraping from your terminal"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "click>=8.3.1",
    "firecrawl-py>=4.12.0",
    "pyperclip>=1.11.0",
    "python-dotenv>=1.2.1",
    "rich>=14.2.0",
]

[project.scripts]
fcrawl = "fcrawl:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/fcrawl"]
